# way-ai-code-

./: .gitignore  AUDIT_REPORT.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: DockSystem.css  DockSystem.jsx  ErrorBoundary.jsx  FileExplorer.css  FileExplorer.jsx  RightSidebar.css  Terminal.css  Terminal.jsx
src/components/Extensions/: ExtensionCard.jsx  ExtensionDetail.jsx  ExtensionPreviewTab.css  ExtensionPreviewTab.jsx  ExtensionStore.js  ExtensionsPanel.css  ExtensionsPanel.jsx
src/components/WayAITab/: AgentRunner.js  TaskHistory.jsx  TokenTracker.jsx  WayAITab.css  WayAITab.jsx
src/lib/: AccountManager.js  fs.js  secureStorage.js
