[package]
name = "way-ai-code"
version = "1.0.0"
description = "Way AI Code — VS Code style AI editor"
authors = ["Way AI"]
edition = "2021"

# No [lib] section needed — this is a binary-only app

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri              = { version = "2.0", features = [] }
tauri-plugin-shell  = "2.0"
tauri-plugin-dialog = "2.0"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
dirs               = "5.0"

[profile.release]
panic       = "abort"
codegen-units = 1
lto         = true
opt-level   = "s"
strip       = true
