[package]
name = "way-ai-code"
version = "1.0.0"
description = "Way AI Code — AI-powered desktop editor"
authors = ["Way AI"]
edition = "2021"

# No [lib] section needed — this is a binary-only app

[build-dependencies]
tauri-build = { version = "=2.6.0", features = [] }

[dependencies]
tauri              = { version = "=2.11.0", features = [] }
tauri-plugin-shell  = "=2.3.5"
tauri-plugin-dialog = "=2.7.0"
tauri-plugin-store  = "=2.4.2"
serde              = { version = "=1.0.228", features = ["derive"] }
serde_json         = "=1.0.149"
dirs               = "=5.0.1"
tokio              = { version = "1", features = ["full"] }

[profile.release]
panic       = "abort"
codegen-units = 1
lto         = true
opt-level   = "s"
strip       = true
